<resources>
    <string-array name="hobby">
        <item>运动</item>
        <item>旅游</item>
        <item>跳舞</item>
        <item>唱歌</item>
        <item>烹饪</item>
        <item>游戏</item>
        <item>理财</item>
        <item>心理学</item>
        <item>画画</item>
        <item>摄影</item>
        <item>逛街</item>
        <item>语言</item>
        <item>园艺</item>
        <item>看电影</item>
        <item>乐器</item>
        <item>文学</item>
        <item>主持</item>
        <item>读书</item>
        <item>户外</item>
        <item>吃货</item>
    </string-array>
<string name="imageview_content_description"></string>
<string name="attention25">您确定将现有的可提现金额全部转换成金币吗？</string>
    <string name="attention24">请您善待您的手机</string>
    <string name="attention23">您已经修改了个人资料是否保存？</string>
   <string name="attention26">个人相册已做修改，是否保存？</string>
    <string name="attention22">新上传的头像已提交审核，审核通过后会自动更新。</string>
    <string name="attention21">信息修改</string>
    <string name="recharge11">充值成功</string>
    <string name="hobby1">选择爱好</string>
    <string name="featuresblack3">黑名单</string>
    <string name="featuresblack2">加入黑名单，您将不再收到对方消息</string>
    <string name="featuresblack1">加入黑名单</string>
    <string name="features2">拉黑</string>
    <string name="features1">举报</string>
    <string name="attention2">用户关注</string>
    <string name="attention1">以成功关注</string>
    <string name="upload4">请确认自拍对象为本人，确认无误后，点击上传照片。</string>
    <string name="upload3">温馨提示:</string>
    <string name="upload2">重新拍照</string>
    <string name="upload1">上传照片</string>
    <string name="charge5">请设置收费价格</string>
    <string name="charge4">想Ta收费</string>
    <string name="charge3">语音接听</string>
    <string name="charge2">视频接听</string>
    <string name="charge1">普通聊天</string>
    <string name="setting14">用户协议</string>
    <string name="setting13">版本V1.3</string>
    <string name="setting12">退出登录</string>
    <string name="setting11">关于聊妹</string>
    <string name="setting10">反馈意见</string>
    <string name="setting9">清除缓存</string>
    <string name="setting8">修改密码</string>
    <string name="setting7">当App运行时，新消息是否需要声音或振动</string>
    <string name="setting6">振动</string>
    <string name="setting5">声音</string>
    <string name="setting4">打开免打扰，将不会收到新消息的通知提醒</string>
    <string name="setting3">消息免打扰</string>
    <string name="setting2">打开后仅使用听筒播放声音</string>
    <string name="setting1">听筒模式</string>
    <string name="withdrawal8">到账</string>
    <string name="withdrawal7">3-5个工作日内</string>
    <string name="withdrawal6">预计将在</string>
    <string name="withdrawal5">体现申请成功</string>
    <string name="withdrawal4">可提现金额：</string>
    <string name="withdrawal3">请输入提现金额</string>
    <string name="withdrawal2">如果账户设置无误,审核通过后资金会转入您的账户</string>
    <string name="withdrawal1">下一步</string>
    <string name="addzfb3">完成</string>
    <string name="addzfb5">请填写支付宝账号</string>
    <string name="addzfb2">账号</string>
    <string name="addzfb4">请填写支付宝真实姓名</string>
    <string name="addzfb1">户名</string>
    <string name="homefilter10">确定</string>
    <string name="homefilter9">取消</string>
    <string name="homefilter8">否</string>
    <string name="homefilter7">是</string>
    <string name="homefilter6">认证：</string>
    <string name="homefilter5">全部</string>
    <string name="homefilter4">女</string>
    <string name="homefilter3">男</string>
    <string name="homefilter2">性别：</string>
    <string name="homefilter1">筛选方式</string>
    <string name="concerned">关注</string>
    <string name="contacts">联系人</string>
    <string name="fanstv">粉丝</string>
    <string name="attentiontv">关注</string>
    <string name="friendstv">好友</string>
    <string name="recharge4">确认充值</string>
    <string name="myzfb">支付宝</string>
    <string name="mywx">微信钱包</string>
    <string name="recharge3">余额</string>
    <string name="recharge2">987214567</string>
    <string name="recharge1">账号</string>
    <string name="wallet13">转成金币</string>
    <string name="wallet12">提现</string>
    <string name="wallet11">充值</string>
    <string name="wallet10">提现账户</string>
    <string name="wallet9">提现记录</string>
    <string name="wallet8">充值记录</string>
    <string name="wallet7">退款记录</string>
    <string name="wallet6">支出记录</string>
    <string name="wallet5">收入记录</string>
    <string name="wallet4">¥900</string>
    <string name="wallet3">可提现金额</string>
    <string name="wallet2">1000金币</string>
    <string name="wallet1">账户余额</string>
    <string name="authentication15">立即上传</string>
    <string name="authentication14">示例视频</string>
    <string name="authentication13">4.严禁上传非法视频，被举报后将永久封号</string>
    <string name="authentication12">3.尽量保证可以清晰的看到您的五官</string>
    <string name="authentication11">2.可以上传美拍、小咖秀等第三方软件上拍摄好的视频</string>
    <string name="authentication_self">1.请保上传的自拍视频是本人</string>
    <string name="authentication10">温馨提示:</string>
    <string name="authentication9">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;请上传一段拍摄好的小视频，上传后该视频会展示在您的个人资料页面，认证视频可以让您的资料更加真实，极大的提高用户对您的关注度。</string>
    <string name="authentication8">认证视频:</string>
    <string name="audit5">如有疑问请联系官方客服</string>
    <string name="audit4">2.认证资料将作为提现和资料审核的依据</string>
    <string name="audit3">1.认证审核大致需要3个工作日</string>
    <string name="audit2">认证须知：</string>
    <string name="audit1">审核中</string>
    <string name="authentication7">马上认证</string>
    <string name="authentication6">模仿以上动作可提高认证通过率</string>
    <string name="authentication5">3.自拍照仅用于认证，官方将对照片保密</string>
    <string name="authentication4">2.请保证自拍照片五官清晰</string>
    <string name="authentication3">1.请保证自拍照片与已上传头像均为本人</string>
    <string name="authentication2">温馨提示:</string>
    <string name="authentication1">通过聊妹官方认证以后，即可获得认证标示，真实身份，更加权威，有效提高聊妹关注度。</string>
    <string name="authenticationvideo">视频上传</string>
    <string name="authenticationphoto">照片认证</string>
    <string name="changecode">验证码&#160;&#160;&#160;&#160;</string>
    <string name="changename">手机号&#160;&#160;&#160;&#160;</string>
    <string name="changerepwd">确认密码</string>
    <string name="changepwd">新密码&#160;&#160;&#160;&#160;</string>
    <string name="reglogcode">验证码</string>
    <string name="reglogpwd">密码&#160;&#160;&#160;&#160;</string>
    <string name="reglogname">手机号</string>
    <string name="changecomplete">完成</string>
    <string name="usersexmr">*性别选定以后不可更改</string>
    <string name="usersexts">请选择性别</string>
    <string name="usersex">性别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="birthdayts">请选择出生日期</string>
    <string name="birthday">出生日期</string>
    <string name="usernamets">请填写昵称</string>
    <string name="username">昵称&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="reg_code">点击获取</string>
    <string name="reg_codets">请填写验证码</string>
    <string name="reg_pwd">6-11位字符</string>
    <string name="reg_phone">请输入手机号</string>
    <string name="register">立即注册</string>
    <string name="rec_addpwd">请输入密码</string>
    <string name="rec_addphonevalidation">请输入手机号</string>
    <string name="log">登录</string>
    <string name="logwb">微博</string>
    <string name="logwx">微信</string>
    <string name="logqq">QQ</string>
    <string name="logreg">立即注册</string>
    <string name="logregts">没有账号？</string>
    <string name="blacklist">黑名单</string>
    <string name="helpcenter">帮助中心</string>
    <string name="toll">收费设定</string>
    <string name="recharge">金币充值</string>
    <string name="wallet">我的钱包</string>
    <string name="mesage">消息中心</string>
    <string name="authentication">个人认证</string>
    <string name="authentication16">完成认证送金币</string>
    <string name="authentication17">送100金币</string>
    <string name="authentication18">送150金币</string>
    <string name="allowvideo">允许视频</string>
    <string name="allowvoice">允许语音</string>
    <string name="chatattention">关注</string>
    <string name="chatgift">礼物</string>
    <string name="chatintroduction">陪伴是最长久的告白</string>
    <string name="chatbirthday">1998-9-8</string>
    <string name="chataddres">山西-太原</string>
    <string name="roomnumber">ID:987214567</string>
    <string name="cityname">太原</string>
    <string name="chatphotoalbum">个人相册</string>
    <string name="chatmyleave">个人留言</string>
    <string name="chathobby">她的爱好</string>
    <string name="chatmyvoide">个人视频</string>
    <string name="chatphotoalbumnum">3</string>
    <string name="chatvideo">180金币/分钟</string>
    <string name="chatvoice">80金币/分钟</string>
    <string name="chattime">00:50“</string>
    <string name="chatname">Flatter灵儿</string>
    <string name="chatage">25岁</string>
    <string name="chatageleave">我就是我，不一样的烟火</string>
    <string name="app_name">聊妹</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rong">RongActivity</string>
    <string name="title_activity_emoji_main">EmojiMainActivity</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="exit">再次点击退出</string>
    <string name="pull_up">上拉加载更多</string>
    <string name="pull_down">下拉刷新</string>
    <string name="pull_open">松开刷新数据</string>
    <string name="pull_loading">正在加载……</string>
    <string name="title_activity_footer_page">FooterPageActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_life">LifeActivity</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
    <string name="title_activity_refresh">RefreshActivity</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_retrieve_pwd">RetrievePwdActivity</string>
    <string name="title_activity_update_pwd">UpdatePwdActivity</string>
    <string name="title_activity_select_friends">SelectFriendsActivity</string>
    <string name="title_activity_select_stranger">SelectStrangerActivity</string>
    <string name="title_activity_blacklist">BlacklistActivity</string>
    <string name="share">share</string>
    <string name="emoji">emoji</string>
    <string name="recording">recording</string>
    <string name="rong">rong</string>
    <string name="PlayRecording">Play Recording</string>
    <string name="Languageswitching">Language switching</string>
    <string name="mobSMS">Mob SMS</string>
    <string name="Refresh">Refresh</string>
    <string name="title_activity_my_message">MyMessageActivity</string>
    <string name="title_activity_my_friends">MyFriendsActivity</string>
    <string name="title_activity_latest_chat">LatestChatActivity</string>
    <string name="title_activity_hot_chat">HotChatActivity</string>
    <string name="title_activity_home_detail">HomeDetailActivity</string>
    <string name="title_activity_register_improve">RegisterImproveActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_user_authentication">UserAuthenticationActivity</string>
    <string name="title_activity_photo_authentication">PhotoAuthenticationActivity</string>
    <string name="title_activity_user_audit">UserAuditActivity</string>
    <string name="title_activity_video_authentication">VideoAuthenticationActivity</string>
    <string name="title_activity_user_wallet">UserWalletActivity</string>
    <string name="title_activity_user_recharge">UserRechargeActivity</string>
    <string name="title_activity_user_withdrawal">UserWithdrawalActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_attention">AttentionActivity</string>
    <string name="title_activity_fans">FansActivity</string>
</resources>