<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:orientation="vertical"
    tools:context="com.vidmt.lmei.activity.UserAuditActivity" >

    <include layout="@layout/main_header" />

    <RelativeLayout
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/audit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:src="@drawable/audit" />

        <TextView
            android:id="@+id/audit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/audit_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/audit1"
            android:textColor="@color/black"
            android:textSize="@dimen/textdx_18" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/audit2"
            android:textColor="@color/authentication"
            android:textSize="@dimen/textdx_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audit3"
            android:textColor="@color/black"
            android:textSize="@dimen/textdx_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audit4"
            android:textColor="@color/black"
            android:textSize="@dimen/textdx_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audit5"
            android:textColor="@color/black"
            android:textSize="@dimen/textdx_16" />
    </LinearLayout>

</LinearLayout>