<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.vidmt.lmei.activity.PhotoUploadAuthenticationActivity" >

    <include layout="@layout/main_header" />

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <com.vidmt.lmei.widget.RoundImageView
            android:id="@+id/up_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:src="@drawable/up" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp" >

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/upload3"
            android:textColor="@color/authentication"
            android:textSize="@dimen/textdx_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload4"
            android:textSize="@dimen/textdx_14" />
    </LinearLayout>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dip"
        android:background="@drawable/loginbg"
        android:gravity="center"
        android:text="@string/upload1"
        android:textColor="@color/white"
        android:textSize="@dimen/textdx_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/repeat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dip"
        android:background="@drawable/loginbg"
        android:gravity="center"
        android:text="@string/upload2"
        android:textColor="@color/white"
        android:textSize="@dimen/textdx_18"
        android:textStyle="bold" />

</LinearLayout>