<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:orientation="vertical"
    tools:context="com.vidmt.lmei.activity.UserWalletActivity" >

    <include layout="@layout/main_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical"
                android:background="#feebc1"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet1"
                    android:textColor="#D99259"
                    android:textSize="@dimen/textdx_16" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:text="0金币 "
                    android:textColor="#fda400"
                    android:textSize="@dimen/textdx_22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dip" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallet3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textdx_16" />

                    <TextView
                        android:id="@+id/zj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dip"
                        android:text="¥0.0"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/textdx_22" />
                </LinearLayout>

                <TextView    
                    android:id="@+id/walletzh"                
                    android:layout_width="80dip"
                    android:layout_height="30dip"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/loginbg"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/wallet13"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textdx_14" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_marginBottom="10dp"
                android:background="@color/gray_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:background="@color/gray_line" />

            <RelativeLayout
                android:id="@+id/income"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/wallet5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_16" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_line" />

            <RelativeLayout
                android:id="@+id/expend"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/wallet6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_16" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_line" />

            <RelativeLayout
                android:id="@+id/tuikuan"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:padding="10dip"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/wallet7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_16" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/top_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/wallet8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_16" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_line" />

            <RelativeLayout
                android:id="@+id/withdraw"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/wallet9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_16" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_line" />

            <RelativeLayout
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/wallet10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textdx_16" />

                <ImageView
                    android:id="@+id/go_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/go" />

                <TextView
                    android:id="@+id/hint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/go_img"
                    android:gravity="center_vertical"
                    android:hint="" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:background="@color/gray_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="50dip"
                android:layout_marginTop="50dip"
                android:orientation="horizontal"
                android:paddingBottom="10dip"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/img_top_up"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/loginbg"
                    android:gravity="center"
                    android:text="@string/wallet11"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textdx_16" />

                <TextView
                    android:id="@+id/img_withdraw"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dip"
                    android:layout_weight="1"
                    android:background="@drawable/loginbg"
                    android:gravity="center"
                    android:text="@string/wallet12"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textdx_16" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>