<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    android:orientation="vertical"
    tools:context="com.vidmt.lmei.activity.UserAuthenticationActivity" >

    <include layout="@layout/main_header" />

    <RelativeLayout
        android:id="@+id/authenticationphotolin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/authenticationphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/negativephoto" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:layout_toRightOf="@+id/authenticationphoto"
            android:text="@string/authenticationphoto"
            android:textColor="@color/black"
            android:textSize="@dimen/textdx_16" />

        <ImageView
            android:id="@+id/photo_go"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/go" />

        <TextView
            android:id="@+id/photo_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:layout_toLeftOf="@+id/photo_go"
            android:gravity="center_vertical"
            android:text="审核中"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/phototmoney"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/photo_up"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:text="@string/authentication17"
            android:textColor="@color/authentication"
            android:textSize="@dimen/textdx_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:id="@+id/authenticationvideolin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/authenticationvideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/negativevideo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/authenticationvideo"
            android:text="@string/authenticationvideo"
            android:textColor="@color/black"
            android:textSize="@dimen/textdx_16" />

        <ImageView
            android:id="@+id/viedo_go"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/go" />

        <TextView
            android:id="@+id/viedo_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:layout_toLeftOf="@+id/viedo_go"
            android:gravity="center_vertical"
            android:text="未上传"
            android:textColor="@color/gray" />
        <TextView
            android:id="@+id/videotmoney"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/viedo_up"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:text="@string/authentication18"
            android:textColor="@color/authentication"
            android:textSize="@dimen/textdx_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

</LinearLayout>